--- a/htdocs/template/main/rank.html
+++ b/htdocs/template/main/rank.html
@@ -1,25 +1,18 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="/www/assets/vendor/css/tether.min.css">
-		<link rel="stylesheet" type="text/css" href="/www/assets/vendor/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/www/assets/vendor/jquery/css/jquery-ui.css">
-		<link href="/www/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen"> <!-- 載入 Bootstrap -->
-		<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css"><!--用本地載入就會抓不到圖-->
-		<link href="/www/assets/vendor/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen"> <!-- Bootstrap 的 RWD 套件 -->
-		<script src="/www/assets/vendor/js/tether.min.js"></script>
-		<script src="/www/assets/vendor/jquery/js/jquery-3.3.1.min.js"></script> <!-- 載入 jQuery 套件 -->
-		<script src="/www/assets/vendor/jquery/js/jquery-ui.js"></script>
-		<script src="/www/assets/vendor/bootstrap/js/bootstrap.min.js"></script> <!-- 載入 Bootstrap 的 JavaScript 功能 -->
-		<script src="/www/assets/vendor/jquery/1.10.2/jquery.min.js"></script>
-		<link rel="stylesheet" href="/www/assets/vendor/bootstrap/3.0.2/bootstrap.min.css">
-		<script src="/www/assets/vendor/bootstrap/3.0.2/bootstrap.min.js"></script> 
-		<link href="/www/assets/vendor/bootstrap-dialog/css/bootstrap-dialog.css" rel="stylesheet" type="text/css" />
-		<script src="/www/assets/vendor/bootstrap-dialog/js/bootstrap-dialog.js"></script>
-		<script type="text/javascript">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="/www/assets/vendor/jquery/jquery-ui-1.12.1/jquery-ui.css">
+        <link rel="stylesheet" href="/www/assets/vendor/bootstrap/3.3.7/css/bootstrap.min.css"> <!-- 載入 Bootstrap -->
+        <link href="/www/assets/vendor/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen"> <!-- Bootstrap 的 RWD 套件 -->
+        <link href="/www/assets/vendor/bootstrap-dialog/css/bootstrap-dialog.css" rel="stylesheet" type="text/css" />
 
-		</script>
+        <script src="/www/assets/vendor/jquery/js/jquery-3.3.1.min.js"></script> <!-- 載入 jQuery 套件 -->
+        <script src="/www/assets/vendor/jquery/js/jquery-ui.js"></script>
+        <script src="/www/assets/vendor/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!-- 載入 Bootstrap 的 JavaScript 功能 -->
+        <script src="/www/assets/vendor/bootstrap-dialog/js/bootstrap-dialog.js"></script>
 		<style>
 			body {
+				font-family: '微軟正黑體';
 			}
 			.text {
 				text-shadow: 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff, 0px 0px 10px #fff;
@@ -27,7 +20,7 @@
 				font-size:20px;
 			}
 		</style>
-		<title>排名</title>
+		<title>RANK</title>
 	</head>
 	<body style="background-color:transparent;">
 		<form method="post">
